tests/ui/explicit-tail-calls/callee_is_track_caller.stderr
error: a function marked with `#[track_caller]` cannot be tail-called
  --> $DIR/callee_is_track_caller.rs:5:5
   |
LL |     become b();
   |     ^^^^^^^^^^

error: aborting due to 1 previous error

